# l2-node

./: .dockerignore  .gitignore  BUILDING.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  ogmara.example.toml
scripts/: docker-entrypoint.sh  update-node.sh
src/: config.rs  lib.rs  main.rs  node.rs  pow.rs  trusted_proxies.rs  util.rs
src/api/: admin.rs  admin_auth.rs  auth.rs  dashboard.html  dashboard.rs  media_fallback.rs  media_limiter.rs  mod.rs  rate_limit_key.rs  routes.rs  state.rs  websocket.rs
src/chain/: anchor_verify.rs  anchoring.rs  metadata_reconcile.rs  mod.rs  parser.rs  sc_views.rs  scanner.rs  types.rs
src/crypto/: merkle.rs  mod.rs  signing.rs
src/ipfs/: client.rs  mod.rs
src/messages/: envelope.rs  mod.rs  router.rs  types.rs  validation.rs
src/metrics/: counters.rs  mod.rs  ring_buffer.rs  system.rs
src/network/: behaviour.rs  discovery.rs  dm_sync.rs  gossip.rs  identity_sync.rs  mesh_stats.rs  mod.rs  news_sync.rs  presence.rs  reconcile.rs  sc_discovery.rs  snapshot.rs  snapshot_client.rs  sync.rs  tor.rs
src/notifications/: alerts.rs  engine.rs  mod.rs
src/storage/: identity.rs  mod.rs  rocks.rs  schema.rs  snapshot.rs
tests/: ipfs_client_integration.rs
tests/integration/: SNAPSHOT_BOOTSTRAP.md
