[package]
name = "ogmara-node"
version = "0.69.0"
edition = "2021"
authors = ["Ogmara Contributors"]
license = "MIT"
description = "Ogmara L2 network node — decentralized chat and news on Klever blockchain"
publish = false

[lib]
name = "ogmara_node"
path = "src/lib.rs"

[[bin]]
name = "ogmara-node"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.50", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"            # MessagePack

# Cryptography (same as Klever's kos-rs)
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
sha3 = "0.10"                # Keccak-256
bech32 = "0.11"              # klv1... address encoding
rand = "0.8"                 # Key generation (0.8 aligns with ed25519-dalek's rand_core 0.6)
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
aes-gcm = "0.10"             # AES-256-GCM for DM encryption
hkdf = "0.12"
sha2 = "0.10"                # SHA-256 for HKDF / Merkle tree
hmac = "0.12"                # HMAC-SHA256 for session tokens

# Storage
rocksdb = "0.24"

# Networking
libp2p = { version = "0.56", features = [
    "gossipsub", "kad", "mdns", "quic", "tcp", "dns",
    "noise", "yamux", "identify", "request-response",
    "memory-connection-limits",
    "tokio", "ed25519", "macros", "cbor",
] }
futures = "0.3"

# HTTP framework
axum = { version = "0.8", features = ["ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
governor = "0.10"                # IP-based rate limiting
tower_governor = "0.8"           # Axum middleware for governor
base64 = "0.22"

# HTTP client (for Klever RPC + IPFS API)
reqwest = { version = "0.13", features = ["json", "multipart", "stream"] }
url = "2.5"                      # peer-fallback URL parsing (SSRF guard, 0.46.7+)

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Configuration
toml = "1.1"

# CLI
clap = { version = "4.6", features = ["derive"] }

# Secret-bearing strings — zeroize on drop, redact in Debug, no Serialize impl
# by default. Wraps `AnchoringConfig.wallet_key` so the source field is not
# process-resident beyond `expose_secret()` callsites (v0.46.0 Phase C / plan C1).
secrecy = { version = "0.10", features = ["serde"] }

# System metrics
sysinfo = "0.34"

# Utilities
uuid = { version = "1.16", features = ["v4"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.11"
dashmap = "6.1"
bs58 = "0.5"
zstd = "0.13"                # Snapshot chunk compression (spec 11-snapshot-sync.md)
moka = { version = "0.12", features = ["future"] }  # Bounded LRU for hot media (spec 4.1 §media)
httpdate = "1.0"             # RFC 7231 HTTP-date parsing for If-Range / Last-Modified (v0.42)

[dev-dependencies]
tokio = { version = "1.50", features = ["test-util", "macros"] }
tempfile = "3"
